# FOV-Slider-F4SE

./: .gitignore  CMakeLists.txt  CMakePresets.json  FOV Slider F4SE.ini  vcpkg.json
cmake/: version.rc.in
cmake/lib/: autoCollectSources.cmake  automaticGameFolderOutput.cmake  copyOutputs.cmake
include/: F4SEMenuFramework.h  PCH.h
src/: EventHandlers.cpp  EventHandlers.h  FOVManager.cpp  FOVManager.h  Helpers.h  Menu.cpp  Menu.h  Settings.cpp  Settings.h  main.cpp
